--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
     <title>Audio Recorder</title>
     <style>
-        #audioRecord{
-            width: 300px;
-        }
+      #audioRecord {
+        width: 300px;
+      }
     </style>
-</head>
-<body>
-
-    <div class="container">
-        <div class="row">
-            <div data-role="controls">
-                <button id="btnRecording">Start Recording</button>
-            </div>
-            <div data-role="recordings" id="audioRecord">
-            </div>
+  </head>
+  <body>
+    <div class="container d-flex flex-column align-items-center justify-content-center tengah card p-3 mx-lg-auto my-lg-auto">
+      <div class="row">
+        <h1>AUDIO RECORDER</h1>
+        <div data-role="controls" class="mx-lg-auto my-lg-auto">
+          <button id="btnRecording" class="mb-3">Start Recording</button>
         </div>
+        <div data-role="recordings" id="audioRecord" class="my-lg-auto"></div>
+      </div>
     </div>
 
     <script src="JS/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script src="JS/recordAudio.js"></script>
     <script src="JS/index.js"></script>
-</body>
+  </body>
 </html>
