PENAMBAHAN USER GUIDE

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <title>Audio Recorder</title>
     <style>
       #audioRecord {
@@ -16,6 +17,15 @@
     <div class="container d-flex flex-column align-items-center justify-content-center tengah card p-3 mx-lg-auto my-lg-auto">
       <div class="row">
         <h1>AUDIO RECORDER</h1>
+        <div class="row">
+          <h3>Beberapa Notes / Cara menggunakan perekam suara :</h3>
+          <ol class="ms-3">
+            <li>Tekan tombol yang bertulisan Start Recording (tombol akan berubah menjadi Stop Recording)</li>
+            <li>Tekan tombol Stop Recording untuk menyelesaikan perekaman suara</li>
+            <li>Perekeman dapat dilakukan secara berulang kali, dan hasil rekaman juga dapat di preview terlebih dahulu</li>
+            <li>Setelah perekaman selesai, silahkan klik tombol <u style="color: blue">▼</u> atau tombol <i class="fas fa-ellipsis-v"></i> untuk mendownload file rekaman suara</li>
+          </ol>
+        </div>
         <div data-role="controls" class="mx-lg-auto my-lg-auto">
           <button id="btnRecording" class="mb-3">Start Recording</button>
         </div>
