UPDATE USER GUIDE

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="row">
         <h1>AUDIO RECORDER</h1>
         <div class="row">
-          <h3>Beberapa Notes / Cara menggunakan perekam suara :</h3>
+          <h3>Beberapa Catatan & Cara menggunakan perekam suara :</h3>
           <ol class="ms-3">
             <li>Tekan tombol yang bertulisan Start Recording (tombol akan berubah menjadi Stop Recording)</li>
             <li>Tekan tombol Stop Recording untuk menyelesaikan perekaman suara</li>
