--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <h3>Beberapa Catatan & Cara menggunakan perekam suara :</h3>
           <ol class="ms-3">
             <li>Tekan tombol yang bertulisan Start Recording (tombol akan berubah menjadi Stop Recording)</li>
+            <!-- <li>Saat baru pertama kali mengunjungi halaman ini harap klik <a href="https://drive.google.com/file/d/1-GFm_P-W6PC_9qo46E_awNEpfbcAJj4h/view?usp=sharing" target="_new">Allow/Ijinkan menggunakan Microphone</a></li> -->
             <li>Tekan tombol Stop Recording untuk menyelesaikan perekaman suara</li>
             <li>Perekeman dapat dilakukan secara berulang kali, dan hasil rekaman juga dapat di preview terlebih dahulu</li>
             <li>Setelah perekaman selesai, silahkan klik tombol <u style="color: blue">▼</u> atau tombol <i class="fas fa-ellipsis-v"></i> untuk mendownload file rekaman suara</li>
