update info step

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               </audio>
             </li>
             <li>Setelah perekaman selesai, silahkan klik tombol <i class="fas fa-play"></i> untuk mendengarkan hasil rekaman suara</li>
+            <li>Harap melakukan perekaman sebanyak 5x</li>
             <li>Setelah 5x menekan tombol stop recording, akan muncul button untuk mendownload semua file rekaman suara sekaligus</li>
             <li>
               Setelah mendownload file hasil rekaman, mohon bantuannya untuk mengisi dan mengupload file rekaman suara pada link google form berikut: <br /><a href="https://forms.gle/PcdHkg47jWr3CGpE6"
